calendar/style.css
body {
	background-color: #E7EFF0;
	font-family: "Adobe Garamond Pro", serif;
}

img {
	height: 100px;
}

p {
	margin: 25px 10px 0px 0px;
	padding-left: 20px;
}

b {
	padding-left: 10px;
}

em {
	padding-left: 10px;
}

.container {
	margin-left: 50px;
 }	


.item {
	background-color: #DCDDDE;
	display: flex;
	height: 100px;
	width: 1400px;
	margin: 10px 200px;
}

.eventTitle {
	font-size: 38px;
	
}

.date {
	font-size: 32px;
	font-style: normal;
}

.time {
	font-size: 32px;
}

.location {
	font-size: 32px;

}

.description {
	font-size: 28px;
	width: 950px;
	padding-right: 20px;
}

.buttons {
	margin: 5px 750px;
	display: flex;
}

button {
	border: none;
	background-color: #E7EFF0;
}

.arrow {
	height: 30px;
	width: auto;
	padding: 15px;
}


.basics{
	margin: 5px;
}

.highlighted {
	background-color: #ffffff;
	height: 150px;
	width: 1500px;
	margin: 0px 150px;
}

.highlighted img {
	height: 150px;
	width: auto;
}

.highlighted .description {
	display: block;
	max-width: 650px;
}

.highlighted .eventTitle {
	font-size: 42px;
}

.highlighted .date::before{
	content: "\A";
	white-space: pre;
}


.normal .card {
	background-color: #DCDDDE;
	height: 100px;
	width: 1400px;
	margin: 20px 200px;
}

.normal img {
	height: 100px;
	width: auto;
}

.normal .description {
	display: none;
}

